modularised home.ejs content

--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -6,173 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EUTRC APP | Home</title>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <style>
-        body {
-            background-color: rgb(25,25,25);
-        }
-        
-        .page {
-            display: flex;
-        }
+    <link rel="stylesheet" href="home.css">
 
-        .left-nav-section {
-            width: 80px;
-            padding: 10px;
-            /* padding-left: 10px; */
-            padding-right: 20px;
-            display: flex;
-            flex-direction: column;
-            row-gap: 30px;
-            padding-top: 40px;
-            border-left: 0px;
-            border-top: 0px;
-            border-right: 1px;
-            border-bottom: 0px;
-            border-style: solid;
-            border-color: black;
-        }
-
-        .icon-btns {
-            border: none;
-        }
-
-        .icon-imgs {
-            width: 100%;
-            cursor: pointer;
-        }
-
-        .right-content-section {
-            flex: 8;
-            display: flex;
-            flex-direction: column;
-            padding: 15px;
-            padding-left: 40px;
-        }
-
-        .right-content {
-            flex: 8;
-            display: none;
-            flex-direction: column;
-            color: rgb(252, 237, 218);
-        }
-
-        .trainings-section {
-            display: flex;
-            flex-direction: column;
-            color: bisque;
-            justify-content: center;
-            padding: 10px;
-        }
-
-        .welcome-msg {
-            text-align:center;
-            margin-bottom: 20px;
-        }
-
-        h2 {
-            border-top: 0px;
-            border-left: 0px;
-            border-right: 0px;
-            border-bottom: 1px;
-            border-style: solid;
-            border-color: beige;
-            padding: 5px;
-            margin-bottom: 10px;
-        }
-
-        .hp-training {
-            display: flex;
-            flex-direction: column;
-        }
-
-        .training-info {
-            margin-left: 10px;
-            display: flex;
-            flex-direction: column;
-            row-gap: 10px;
-            margin-bottom: 30px;
-        }
-
-        /* Exclusively calendar stuff */
-        .calendar-wrapper {
-            display: flex;
-            flex-direction: column;
-        }
-
-        .title-section{
-            display: flex;
-            justify-content:space-evenly;
-            align-items: center;
-            flex-direction: row;
-            padding: 10px;
-            border-top: 0px;
-            border-left: 0px;
-            border-right: 0px;
-            border-bottom: 1px;
-            border-style: solid;
-            border-color: antiquewhite;
-            font-size: 50px;
-        }
-
-        .month-buttons {
-            font-size: 100px;
-            background-color: transparent;
-            color: azure;
-            border: none;
-            cursor: pointer;
-        }
-
-        .weekday-labels-container {
-            display: flex;
-            flex-direction: row;
-        }
-
-        .weekday-labels {
-            text-align: center;
-            flex: 1;
-            padding: 5px;
-            border-top: 1px;
-            border-left: 1px;
-            border-right: 1px;
-            border-bottom: 1px;
-            border-style: solid;
-            border-color: antiquewhite;
-        }
-
-        .cells-container {
-            display: grid; 
-            grid-template-columns: repeat(7, 1fr);
-            /* text-align: center; */
-        }
-
-        .cells {
-            margin-top: 10px;
-            margin-bottom: 10px;
-            padding: 5px;
-            min-height: 35px;
-            text-align: center;
-        }
-
-        .cell-date-day {
-            text-align: left;
-            font-size:medium;
-        }
-
-        .cell-training-info {
-            color: azure;
-            font-size:larger;
-            font-weight: 500;
-            padding:5px; 
-            cursor:pointer
-        }
-
-        .expanded-training-info {
-            display:flex;
-            flex-direction: column;
-        }
-
-    </style>
 </head>
 <body>
     
@@ -324,204 +159,8 @@
         </div>
     </div>
 
-    <script>
-        selectedDate = new Date()
-        var trainingArrayJson = null;
-
-        function showHome(){
-            let homePageObj = document.getElementById('homePage')
-            homePageObj.style.display = 'flex'
-
-            let eventsPageObj = document.getElementById('eventsPage')
-            eventsPageObj.style.display = 'none'
-        }
-
-        function showEvents(){
-            calendarInit(selectedDate)
-
-            let homePageObj = document.getElementById('homePage')
-            homePageObj.style.display = 'none'
-
-            let eventsPageObj = document.getElementById('eventsPage')
-            eventsPageObj.style.display = 'flex'
-
-            const month = selectedDate.toLocaleString('default', { month: 'long' });
-            var year = selectedDate.getFullYear();
-            $.ajax({
-                url: 'http://megabytten.org/eutrcapp/trainings.json',
-                method: 'GET',
-                headers: {
-                    "request": "calendar",
-                    month,
-                    year
-                },
-                success: function (response) {
-                    console.log('Successfully obtained training info. Loading it into calendar.');
-                    loadTrainings(response, selectedDate)
-                }
-            })
-        }
-
-        function nextMonth(){
-            selectedDate = new Date(selectedDate.getFullYear(), selectedDate.getMonth()+1, 1);
-            calendarInit(selectedDate)
-            const month = selectedDate.toLocaleString('default', { month: 'long' });
-            var year = selectedDate.getFullYear();
-            $.ajax({
-                url: 'http://megabytten.org/eutrcapp/trainings.json',
-                method: 'GET',
-                headers: {
-                    "request": "calendar",
-                    month,
-                    year
-                },
-                success: function (response) {
-                    console.log('Successfully obtained training info. Loading it into calendar.');
-                    loadTrainings(response, selectedDate)
-                }
-            })
-        }
-
-        function lastMonth(){
-            selectedDate = new Date(selectedDate.getFullYear(), selectedDate.getMonth()-1, 1);
-            calendarInit(selectedDate)
-            const month = selectedDate.toLocaleString('default', { month: 'long' });
-            var year = selectedDate.getFullYear();
-            $.ajax({
-                url: 'http://megabytten.org/eutrcapp/trainings.json',
-                method: 'GET',
-                headers: {
-                    "request": "calendar",
-                    month,
-                    year
-                },
-                success: function (response) {
-                    console.log('Successfully obtained training info. Loading it into calendar.');
-                    loadTrainings(response, selectedDate)
-                }
-            })
-        }
-
-        function calendarInit(date) {
-            //these lines set the H3 text as Month Year on the top of the calendar
-            var monthName = new Intl.DateTimeFormat("en-US", { month: "long" }).format;
-            var longName = monthName(date);
-            var h3 = document.getElementById('month')
-            h3.textContent = longName + " " + date.getFullYear();
-
-            //these obtains the first day of the month
-            const firstDayCurrentMonth = new Date(date.getFullYear(),  date.getMonth(), 1).getDay();
-            let x = getFirstDayInt(firstDayCurrentMonth)
-            
-            // this hides the cells up until the first date
-            for (y=1; y < x; y++){
-                let cell = document.getElementById('cell' + y)
-                cell.style.visibility = 'hidden'
-            }
-
-            // this sets all cells from the starting date until the last day of the month as visible
-            var lastDayOfMonth = new Date(date.getFullYear(), date.getMonth()+1, 0).getDate();
-            for (var day = 1; day <=lastDayOfMonth; day++){
-                let cell = document.getElementById('cell' + x)
-                cell.style.visibility = 'visible'
-                
-                // sets the textContent as the day number
-                let cellHeader = document.getElementById('cell-date-' + x)
-                cellHeader.textContent = day
-                x++;
-            }
-
-            console.log(lastDayOfMonth);
-            for (lastDayOfMonth; lastDayOfMonth < 42; lastDayOfMonth++){
-                let cell = document.getElementById('cell' + x)
-                if (cell == null){
-                    break;
-                }
-                cell.style.visibility = 'hidden'
-                x++
-            }
-        }
-
-        function loadTrainings(trainingArrayJson, date){
-            $('.cell-training-info').html('') //uses jQuery to reset HTML content within all <span class='cell-training-info'>
-
-            trainingArrayJson.forEach(training => {
-                const firstDayCurrentMonth = new Date(date.getFullYear(),  date.getMonth(), 1).getDay();
-                var dateInt = Number(training['date_day'])  + (getFirstDayInt(firstDayCurrentMonth)-1)
-                var trainingDayCell = document.getElementById('cell-training-' + dateInt)
-                trainingDayCell.innerHTML = trainingDayCell.innerHTML + "<br>" + training['team']
-
-                if ($('#'+trainingDayCell.id).data() != null){
-                    var currentData = $('#'+trainingDayCell.id).data()
-                    currentData[training['id']] = training
-                } else {
-                    var id = training['id']
-                    $('#'+trainingDayCell.id).data({id: training})
-                }
-                
-            });
-        }
-
-        function viewTraining(clickedEl){
-            if (this.innerHTML == ''){
-                console.log("no training to view!");
-            } else {
-                $('.expanded-training-info').empty() //resets HTML
-
-                var trainingJSON = $('#'+clickedEl.id).data()
-                for (var training in trainingJSON) {
-                    console.log(JSON.stringify(trainingJSON[training]));
-                    $('.expanded-training-info').append(
-                        '<div>' +
-                            '<h3>Training #' + trainingJSON[training]['id']  + '</h3>' +
-                            '<span style="display:block">Time: ' + trainingJSON[training]['time'] + '</span>' +
-                            '<span style="display:block">Team: ' + trainingJSON[training]['team'] + '</span>' +
-                            '<span style="display:block">Location: ' + trainingJSON[training]['location'] + '</span>' +
-                            '<span style="display:block">Drills: ' + trainingJSON[training]['drills'] + '</span>' +
-                            '<span style="display:block">Attendance: ' + trainingJSON[training]['attendance'] + '</span>' +
-                        '</div>'
-                    )
-                }
-            }
-        }
-
-        //utility function
-        function getFirstDayInt(firstDay){
-            switch (firstDay) {
-                case 0:
-                    //sunday
-                    return 7
-                    break;
-                case 1:
-                    //monday
-                    return 1
-                    break;
-                case 2:
-                    //tuesday
-                    return 2
-                    break;
-                case 3:
-                    //wednesday
-                    return 3
-                    break;
-                case 4:
-                    //thursday
-                    return 4
-                    break;
-                case 5:
-                    //friday
-                    return 5
-                    break;
-                case 6:
-                    //saturday
-                    return 6
-                    break;
-                default:
-                    break;
-            }
-        }
-
-    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="home.js"></script>
 
 </body>
 </html>
