--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EUTRC APP | Home</title>
 
-    <link rel="stylesheet" href="views/eutrcapp/home.css">
+    <link rel="stylesheet" href="eutrcapp/home.css">
 
 </head>
 <body>
@@ -160,7 +160,7 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="views/eutrcapp/home.js"></script>
+    <script src="eutrcapp/home.js"></script>
 
 </body>
 </html>
