--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EUTRC APP | Home</title>
 
-    <link rel="stylesheet" href="eutrcapp/home.css">
+    <link rel="stylesheet" href="home.css">
 
 </head>
 <body>
