--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -38,6 +38,13 @@
                 src="/website images/eutrc app/icons/events_icon.png" 
                 alt="Events Icon"
             >
+
+            <img 
+                class="icon-imgs"
+                onclick="showMoves()"
+                src="/website images/eutrc app/icons/moves_icon.png" 
+                alt="Moves Icon"
+            >
             
         </div>
         <!-- This right content section will be what changes on button click -->
