icon vector ref

--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -42,7 +42,7 @@
             <img 
                 class="icon-imgs"
                 onclick="showMoves()"
-                src="/website images/eutrc app/icons/moves_icon.png" 
+                src="https://www.flaticon.com/free-icons/strategic-plan" 
                 alt="Moves Icon"
             >
             
