moves - first mp4 and page setup

--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -162,6 +162,18 @@
                 </div>
 
             </div>
+
+            <!-- This div holds all pag einfo for MOVES page -->
+            <div class="right-content" name="movesPage" id="movesPage">
+                <h1 style="text-align:center">
+                    EUTRC Moves
+                </h1>
+
+                <video src="/website images/eutrc app/moves/move_32_short.mp4">
+                    Your Web-browser couldnt support this!
+                </video>
+
+            </div>
             
         </div>
     </div>
