--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -169,7 +169,10 @@
                     EUTRC Moves
                 </h1>
 
-                <video src="/website images/eutrc app/moves/move_32_short.mp4">
+                <video controls autoplay muted
+                    src="/website images/eutrc app/moves/move_32_short.mp4"
+                    type="video/mp4"
+                >
                     Your Web-browser couldnt support this!
                 </video>
 
