moves page reformat

--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -169,12 +169,45 @@
                     EUTRC Moves
                 </h1>
 
-                <video controls autoplay muted
-                    src="/website images/eutrc app/moves/move_32_short.mp4"
-                    type="video/mp4"
-                >
-                    Your Web-browser couldnt support this!
-                </video>
+                <h2>
+                    Table of contents
+                </h2>
+
+                <ul>
+                    <li>
+                        <a href="#32s">
+                            32s
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#32s">
+                            Mid-Mid plays
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#32s">
+                            Misc
+                        </a>
+                    </li>
+                </ul>
+
+
+                
+                
+                <div class="" id="32s">
+                    <h3>
+                        32 Attacking Moves
+                    </h3>
+
+                    <video controls autoplay muted
+                        class="move-videos"
+                        src="/website images/eutrc app/moves/move_32_short.mp4"
+                        type="video/mp4"
+                    >
+                        Your Web-browser couldnt support this!
+                    </video>
+
+                </div>
 
             </div>
             
