--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -199,13 +199,50 @@
                         32 Attacking Moves
                     </h3>
 
-                    <video controls autoplay muted
-                        class="move-videos"
-                        src="/website images/eutrc app/moves/move_32_short.mp4"
-                        type="video/mp4"
-                    >
-                        Your Web-browser couldnt support this!
-                    </video>
+                    <div class="move-container">
+                        <div class="move-title">
+                            <h4>
+                                32 Short
+                            </h4>
+                        </div>
+                        <div class="move-content">
+                            <div class="left-button-bar"> 
+                                &lt;
+                            </div>
+                            <div class="main-content">
+                                <div class="move-description">
+                                    <ul>
+                                        <li>
+                                            Middle (3) drags defender out to link (2) while other middle chops into created space with short line
+                                        </li>
+                                        <li>
+                                            Dummy half wraps chopping middle in case defence squishes in to defend (= options wide)
+                                        </li>
+                                        <li>
+                                            Attacks a lazy, slow, or middle who doesn't know their corners/shuts
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="video-container">
+                                    <video controls autoplay muted
+                                    class="move-videos"
+                                    src="/website images/eutrc app/moves/move_32_short.mp4"
+                                    type="video/mp4"
+                                    >
+                                        Your Web-browser couldnt support this!
+                                    </video>
+                                </div>
+                            </div>
+                            <div class="right-button-bar">
+                                &gt;
+                            </div>
+
+                        </div>
+
+                    </div>
+
+
+                   
 
                 </div>
 
