--- a/public/eutrcapp/home.css
+++ b/public/eutrcapp/home.css
@@ -168,6 +168,8 @@ h2 {
 }
 
 .move-content {
+    display: flex;
+    flex-direction: row;
     text-align: center;
 }
 
@@ -178,7 +180,7 @@ h2 {
 
 .main-content {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 .move-description {
