--- a/public/eutrcapp/home.css
+++ b/public/eutrcapp/home.css
@@ -174,6 +174,7 @@ h2 {
 }
 
 .left-button-bar {
+    display: flex;
     align-items: center;
     justify-content: center;
 }
@@ -193,6 +194,7 @@ h2 {
 }
 
 .right-button-bar {
+    display: flex;    
     align-items: center;
     justify-content: center;
 }
