h4 move title change

--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -201,7 +201,7 @@
 
                     <div class="move-container">
                         <div class="move-title">
-                            <h4>
+                            <h4 style="margin-bottom:10px; text-align: center;">
                                 32 Short
                             </h4>
                         </div>
