--- a/public/eutrcapp/home.css
+++ b/public/eutrcapp/home.css
@@ -171,6 +171,7 @@ h2 {
     display: flex;
     flex-direction: row;
     text-align: center;
+    justify-content: center;
 }
 
 .left-button-bar {
