< > font size inc

--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -206,7 +206,7 @@
                             </h4>
                         </div>
                         <div class="move-content">
-                            <div class="left-button-bar"> 
+                            <div class="button-bar"> 
                                 &lt;
                             </div>
                             <div class="main-content">
@@ -233,7 +233,7 @@
                                     </video>
                                 </div>
                             </div>
-                            <div class="right-button-bar">
+                            <div class="button-bar">
                                 &gt;
                             </div>
 
