--- a/public/eutrcapp/home.css
+++ b/public/eutrcapp/home.css
@@ -174,7 +174,8 @@ h2 {
     justify-content: center;
 }
 
-.left-button-bar {
+.button-bar {
+    font-size: large;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -190,12 +191,6 @@ h2 {
 }
 
 .video-container{
-    align-items: center;
-    justify-content: center;
-}
-
-.right-button-bar {
-    display: flex;    
     align-items: center;
     justify-content: center;
 }
