clickable slide buttons

--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -207,7 +207,7 @@
                         </div>
                         <div class="move-content">
                             <div class="button-bar"> 
-                                <span class="arrow-button">&lt;</span>
+                                <span class="arrow-button" onclick="previousSlide(this)">&lt;</span>
                             </div>
                             <div class="main-content">
                                 <div class="move-description">
@@ -234,7 +234,7 @@
                                 </div>
                             </div>
                             <div class="button-bar">
-                                <span class="arrow-button">&gt;</span>
+                                <span class="arrow-button" onclick="previousSlide(this)">&gt;</span>
                             </div>
 
                         </div>
