Ajax slide appending with new route

--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -199,7 +199,7 @@
                         32 Attacking Moves
                     </h3>
 
-                    <div class="move-container">
+                    <div class="move-container" id="moves_32">
                         <div class="move-title">
                             <h4 style="margin-bottom:10px; text-align: center;">
                                 32 Short
@@ -207,7 +207,7 @@
                         </div>
                         <div class="move-content">
                             <div class="button-bar"> 
-                                <span class="arrow-button" onclick="previousSlide(this)">&lt;</span>
+                                <span class="arrow-button" onclick="change32Slide(-1)">&lt;</span>
                             </div>
                             <div class="main-content">
                                 <div class="move-description">
@@ -234,7 +234,7 @@
                                 </div>
                             </div>
                             <div class="button-bar">
-                                <span class="arrow-button" onclick="previousSlide(this)">&gt;</span>
+                                <span class="arrow-button" onclick="change32Slide(1)">&gt;</span>
                             </div>
 
                         </div>
