Slideshow AJAX trial  - Modularised First 32 short slide  - Created filepath detection system under /eutrc/app/moves  - created new folder under eutrcapp/slides to hold all the moves

--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -195,51 +195,11 @@
                 
                 
                 <div class="" id="32s">
-                    <h3>
+                    <h3 onclick="open32Slides()" style="cursor: pointer;">
                         32 Attacking Moves
                     </h3>
 
-                    <div class="move-container" id="moves_32">
-                        <div class="move-title">
-                            <h4 style="margin-bottom:10px; text-align: center;">
-                                32 Short
-                            </h4>
-                        </div>
-                        <div class="move-content">
-                            <div class="button-bar"> 
-                                <span class="arrow-button" onclick="change32Slide(-1)">&lt;</span>
-                            </div>
-                            <div class="main-content">
-                                <div class="move-description">
-                                    <ul>
-                                        <li>
-                                            Middle (3) drags defender out to link (2) while other middle chops into created space with short line
-                                        </li>
-                                        <li>
-                                            Dummy half wraps chopping middle in case defence squishes in to defend (= options wide)
-                                        </li>
-                                        <li>
-                                            Attacks a lazy, slow, or middle who doesn't know their corners/shuts
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div class="video-container">
-                                    <video controls autoplay muted
-                                    class="move-videos"
-                                    src="/website images/eutrc app/moves/move_32_short.mp4"
-                                    type="video/mp4"
-                                    >
-                                        Your Web-browser couldnt support this!
-                                    </video>
-                                </div>
-                            </div>
-                            <div class="button-bar">
-                                <span class="arrow-button" onclick="change32Slide(1)">&gt;</span>
-                            </div>
-
-                        </div>
-
-                    </div>
+                    
 
 
                    
