Added new mid category/slideshow and monkey vid

--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -190,14 +190,19 @@
                         </a>
                     </li>
                 </ul>
-
-
                 
                 <h3 onclick="open32Slides()" style="cursor: pointer;">
-                    32 Attacking Moves
+                    32 Attacking Moves (CLICK!)
                 </h3>
                 
                 <div class="" id="32s">
+                </div>
+
+                <h3 onclick="openMidSlides()" style="cursor: pointer;">
+                    Mid-Mid Attacking Moves (CLICK!)
+                </h3>
+                
+                <div class="" id="mid">
                 </div>
 
             </div>
