--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -48,170 +48,16 @@
             
         </div>
         <!-- This right content section will be what changes on button click -->
-        <div class="right-content-section">
-
-            <!-- This div holds all the page information for the HOME page -->
-            <div class="right-content" name="homePage" id="homePage" style="display:flex;"> 
-                <h1 style="text-align:center ;">
-                    EUTRC Home
-                </h1>
-    
-                <text class="welcome-msg">Welcome back <%=userInfo['name']%></text>
-    
-                <div class="trainings-section">
-                    <h2>Upcoming EUTRC Trainings</h2>
-    
-                    <div class="hp-training">
-                        <h3>High Performance (HP)</h3>
-                        <% if (hpTraining['date_day'] != 'none') { %>
-                            <div class="training-info">
-                                <text>Date: <%= hpTraining['date_day'] %>/<%= hpTraining['date_month'] %>/<%= hpTraining['date_year'] %></text>
-                                <text>Time: <%= hpTraining['time'] %></text>
-                                <text>Location: <%= hpTraining['location'] %></text>
-                                <text>Drills: <%= hpTraining['drills'] %></text>
-                            </div>
-                        <% } else { %> 
-                            <p style="margin-left: 10px;margin-bottom: 20px;">There is no High Performance training within the next week.</p>
-                        <% } %> 
-                    </div>
-    
-                    <div class="dv-training">
-                        <h3>Development (DV)</h3>
-                        <% if (dvTraining['date_day'] != 'none') { %>
-                            <div class="training-info">
-                                <text>Date: <%= dvTraining['date_day'] %>/<%= dvTraining['date_month'] %>//<%= dvTraining['date_year'] %></text>
-                                <text>Time: <%= dvTraining['time'] %></text>
-                                <text>Location: <%= dvTraining['location'] %></text>
-                                <text>Drills: <%= dvTraining['drills'] %></text>
-                            </div>
-                        <% } else { %> 
-                            <p style="margin-left: 10px;margin-bottom: 20px;">There is no Development training within the next week.</p>
-                        <% } %> 
-                    </div>
-    
-                    <div class="cb-training">
-                        <h3>Club (CB)</h3>
-                        <% if (cbTraining['date_day'] != 'none') { %>
-                            <div class="training-info">
-                                <text>Date: <%= cbTraining['date_day'] %>/<%= cbTraining['date_month'] %>//<%= cbTraining['date_year'] %></text>
-                                <text>Time: <%= cbTraining['time'] %></text>
-                                <text>Location: <%= cbTraining['location'] %> </text>
-                                <text>Drills: <%= cbTraining['drills'] %></text>
-                            </div>
-                        <% } else { %> 
-                            <p style="margin-left: 10px;margin-bottom: 20px;">There is no Club training within the next week.</p>
-                        <% } %> 
-                    </div>
-                </div>
-            </div>
-
-            <!-- This div holds all the page information for the EVENTS page -->
-            <div class="right-content" name="eventsPage" id="eventsPage"> 
-                <h1 style="text-align:center ;">
-                    EUTRC Events
-                </h1>
-
-                <!-- This is the calendar! -->
-                <div class="calendar-wrapper">
-                    <div class="title-section">
-                        <button onclick="lastMonth()" class="month-buttons">
-                            &#8592
-                        </button>
-                        <h3 id="month">
-                            MONTH
-                        </h3>
-                        <button onclick="nextMonth()" class="month-buttons">
-                            &#8594
-                        </button>
-                    </div>
-
-                    <div class="weekday-labels-container">
-                        <text class="weekday-labels">Monday</text>
-                        <text class="weekday-labels">Tuesday</text>
-                        <text class="weekday-labels">Wednesday</text>
-                        <text class="weekday-labels">Thursday</text>
-                        <text class="weekday-labels">Friday</text>
-                        <text class="weekday-labels">Saturday</text>
-                        <text class="weekday-labels">Sunday</text>
-                    </div>
-
-                    <div class="cells-container">
-                        <% for (x=0; x < 42; x++) { %> 
-                            <div class="cells" id="cell<%=x+1%>" name="cell<%=x+1%>">
-                                <span class="cell-date-day" id="cell-date-<%=x+1%>" name="cell-date-<%=x+1%>">
-                                    Cell<%=x+1%>
-                                </span>
-                                <span 
-                                    class="cell-training-info" 
-                                    id="cell-training-<%=x+1%>" 
-                                    name="cell-training-<%=x+1%>" 
-                                    onclick="viewTraining(this)"
-                                    >
-
-                                </span>
-                            </div>
-                            <!-- <text class="cells" id="cell<%=x+1%>" name="cell<%=x+1%>">Cell<%=x+1%></text> -->
-                        <% } %> 
-                    </div>
-
-
-                    <div class="expanded-training-info">
-
-                    </div>
-
-                </div>
-
-            </div>
-
-            <!-- This div holds all pag einfo for MOVES page -->
-            <div class="right-content" name="movesPage" id="movesPage">
-                <h1 style="text-align:center">
-                    EUTRC Moves
-                </h1>
-
-                <h2>
-                    Table of contents
-                </h2>
-
-                <ul>
-                    <li>
-                        <a href="#32s">
-                            32s
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#32s">
-                            Mid-Mid plays
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#32s">
-                            Misc
-                        </a>
-                    </li>
-                </ul>
-                
-                <h3 onclick="open32Slides()" style="cursor: pointer;">
-                    32 Attacking Moves (CLICK!)
-                </h3>
-                
-                <div class="" id="32s">
-                </div>
-
-                <h3 onclick="openMidSlides()" style="cursor: pointer;">
-                    Mid-Mid Attacking Moves (CLICK!)
-                </h3>
-                
-                <div class="" id="mid">
-                </div>
-
-            </div>
-            
+        <div class="right-content-section" id="right-panel-container">
         </div>
     </div>
 
+    <form action="" style="display:none;">
+        <input type="hidden" name="name" id="name" value="<%= name %>">
+    </form>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="home.js"></script>
+    <script src="home.js"></script>   
 
 </body>
 </html>
