--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -53,7 +53,7 @@
     </div>
 
     <form action="" style="display:none;">
-        <input type="hidden" name="name" id="name" value="<%= name %>">
+        <input type="hidden" name="name" id="name" value="<%= userInfo['name'] %>">
     </form>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
