--- a/views/eutrc_app/landing.ejs
+++ b/views/eutrc_app/landing.ejs
@@ -57,7 +57,7 @@
     </form>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="home.js"></script>   
+    <script src="landing.js"></script>   
 
 </body>
 </html>
