--- a/views/panels/events.ejs
+++ b/views/panels/events.ejs
@@ -59,5 +59,5 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="home.js"></script>
+    <script src="eutrcapp/panels/events.js"></script>
 </html>
