--- a/views/panels/home.ejs
+++ b/views/panels/home.ejs
@@ -57,5 +57,5 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="eutrcapp/panels/home.js"></script>
+    <script src="panels/home.js"></script>
 </html>
